--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -17,17 +17,18 @@
         </Grid.ColumnDefinitions>
 
         <!-- Menu -->
-        <ListBox x:Name="listbox_Main" Grid.Column="0" SelectionMode="Single" SelectionChanged="listbox_Main_SelectionChanged" Background="Transparent">
-            <ListBoxItem x:Name="listboxitem_Graphics" Content="Graphics" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" Padding="10" Background="#444"/>
-            <ListBoxItem x:Name="listboxitem_Tuning" Content="Tuning" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" Padding="10" Background="#444"/>
-            <ListBoxItem x:Name="listboxitem_Fans" Content="Fans" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" Padding="10" Background="#444"/>
-            <ListBoxItem x:Name="listboxitem_Display" Content="Display" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" Padding="10" Background="#444"/>
-            <ListBoxItem x:Name="listboxitem_Info" Content="Info" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" Padding="10" Background="#444"/>
+        <ListBox x:Name="listbox_Main" Grid.Column="0" SelectionMode="Single" SelectionChanged="listbox_Main_SelectionChanged">
+            <ListBoxItem x:Name="listboxitem_Graphics" Content="Graphics" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <ListBoxItem x:Name="listboxitem_Tuning" Content="Tuning" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <ListBoxItem x:Name="listboxitem_Fans" Content="Fans" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <ListBoxItem x:Name="listboxitem_Display" Content="Display" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <ListBoxItem x:Name="listboxitem_Info" Content="Info" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         </ListBox>
 
         <!-- Content -->
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
@@ -35,7 +36,7 @@
             <!-- Header -->
             <Grid Grid.Row="0" Margin="5" Padding="10" Background="#444">
                 <!-- Status text -->
-                <TextBlock x:Name="textblock_Status" Text="AMD Driver Tool" Foreground="#888" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <TextBlock x:Name="textblock_Status" Text="AMD Driver Tool" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Right"/>
 
                 <StackPanel Orientation="Horizontal">
                     <!-- Gpu Select -->
@@ -46,13 +47,26 @@
                 </StackPanel>
             </Grid>
 
+            <!-- Status -->
+            <StackPanel Grid.Row="1" Margin="5" Padding="5" Background="#444" Orientation="Horizontal">
+                <TextBlock x:Name="textblock_Current_Gpu_Usage" Text="..." Margin="0,0,10,0" FontSize="18"/>
+                <TextBlock x:Name="textblock_Current_Core_Speed" Margin="0,0,10,0" FontSize="18"/>
+                <TextBlock x:Name="textblock_Current_Memory_Speed" Margin="0,0,10,0" FontSize="18"/>
+                <TextBlock x:Name="textblock_Current_Power_Watt" Margin="0,0,10,0" FontSize="18"/>
+                <TextBlock x:Name="textblock_Current_Power_Voltage" Margin="0,0,10,0" FontSize="18"/>
+                <TextBlock x:Name="textblock_Current_Fan_Speed" Margin="0,0,10,0" FontSize="18"/>
+                <TextBlock x:Name="textblock_Current_Temp_Core" Margin="0,0,10,0" FontSize="18"/>
+                <TextBlock x:Name="textblock_Current_Temp_Hotspot" Margin="0,0,10,0" FontSize="18"/>
+                <TextBlock x:Name="textblock_Current_Temp_Intake" Margin="0,0,10,0" FontSize="18"/>
+            </StackPanel>
+
             <!-- Main -->
-            <ScrollViewer Grid.Row="1" Margin="5,0,10,0" VerticalScrollBarVisibility="Auto">
+            <ScrollViewer Grid.Row="2" Margin="5,0,10,0" VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <!-- Graphics -->
                     <StackPanel x:Name="stackpanel_Graphics">
                         <!-- Enhanced Sync -->
-                        <ToggleSwitch x:Name="toggleswitch_EnhancedSync" OffContent="Enhanced Sync" OnContent="Enhanced Sync"/>
+                        <ToggleSwitch x:Name="toggleswitch_EnhancedSync" OffContent="Enhanced Sync" OnContent="Enhanced Sync" Toggled="toggleswitch_EnhancedSync_Toggled"/>
 
                         <!-- Vertical Refresh -->
                         <Grid Margin="0,10,0,0">
@@ -82,14 +96,14 @@
 
                     <!-- Tuning -->
                     <StackPanel x:Name="stackpanel_Tuning" Visibility="Collapsed">
-                        <Grid>
-                            <TextBlock Text="GPU Tuning" FontSize="20" FontWeight="Medium"/>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <TextBlock x:Name="textblock_Current_Gpu_Usage" Margin="0,0,10,0" Foreground="#888" FontSize="20" FontWeight="Medium"/>
-                                <TextBlock x:Name="textblock_Current_Core_Speed" Foreground="#888" FontSize="20" FontWeight="Medium"/>
-                            </StackPanel>
-                        </Grid>
+                        <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                            <Button x:Name="button_Apply" Click="button_Apply_Click" Content="Apply" Width="100"/>
+                            <Button x:Name="button_Reset" Click="button_Reset_Click" Content="Reset" Margin="5,0,0,0" Width="100"/>
+                            <Button x:Name="button_Import" Click="button_Import_Click" Content="Import" Margin="5,0,0,0" Width="100"/>
+                            <Button x:Name="button_Export" Click="button_Export_Click" Content="Export" Margin="5,0,0,0" Width="100"/>
+                        </StackPanel>
 
+                        <TextBlock Text="GPU Tuning" Margin="0,5,0,0" FontSize="20" FontWeight="Medium"/>
                         <TextBlock Text="Minimum Frequency (MHz)"/>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -110,11 +124,7 @@
                             <Slider Grid.Column="1" x:Name="slider_Core_Max" Margin="10,0,0,0"/>
                         </Grid>
 
-                        <Grid Margin="0,10,0,0">
-                            <TextBlock Text="Memory Tuning" FontSize="20" FontWeight="Medium"/>
-                            <TextBlock x:Name="textblock_Current_Memory_Speed" Foreground="#888" FontSize="20" FontWeight="Medium" HorizontalAlignment="Right"/>
-                        </Grid>
-
+                        <TextBlock Text="Memory Tuning" Margin="0,10,0,0" FontSize="20" FontWeight="Medium"/>
                         <ComboBox x:Name="combobox_Memory_Timing" Header="Memory Timing" Width="300"/>
                         <TextBlock Text="Maximum Frequency (MHz)" Margin="0,10,0,0"/>
                         <Grid>
@@ -126,14 +136,7 @@
                             <Slider Grid.Column="1" x:Name="slider_Memory_Max" Margin="10,0,0,0" StepFrequency="2"/>
                         </Grid>
 
-                        <Grid Margin="0,10,0,0">
-                            <TextBlock Text="Power Tuning" FontSize="20" FontWeight="Medium"/>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <TextBlock x:Name="textblock_Current_Power_Watt" Margin="0,0,10,0" Foreground="#888" FontSize="20" FontWeight="Medium"/>
-                                <TextBlock x:Name="textblock_Current_Power_Voltage" Foreground="#888" FontSize="20" FontWeight="Medium"/>
-                            </StackPanel>
-                        </Grid>
-
+                        <TextBlock Text="Power Tuning" Margin="0,10,0,0" FontSize="20" FontWeight="Medium"/>
                         <TextBlock Text="Power Limit (%)"/>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -153,22 +156,15 @@
                             <TextBox Grid.Column="0" x:Name="textbox_Power_Voltage" IsEnabled="False" Text="{Binding ElementName=slider_Power_Voltage, Path=Value}"/>
                             <Slider Grid.Column="1" x:Name="slider_Power_Voltage" Margin="10,0,0,0"/>
                         </Grid>
-
-                        <StackPanel Margin="0,15,0,0" Orientation="Horizontal">
-                            <Button x:Name="button_Apply" Click="button_Apply_Click" Content="Apply" Width="100"/>
-                            <Button x:Name="button_Reset" Click="button_Reset_Click" Content="Reset" Margin="5,0,0,0" Width="100"/>
-                            <Button x:Name="button_Import" Click="button_Import_Click" Content="Import" Margin="5,0,0,0" Width="100"/>
-                            <Button x:Name="button_Export" Click="button_Export_Click" Content="Export" Margin="5,0,0,0" Width="100"/>
-                        </StackPanel>
                     </StackPanel>
 
                     <!-- Fans -->
                     <StackPanel x:Name="stackpanel_Fans" Visibility="Collapsed">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock x:Name="textblock_Current_Fan_Speed" Margin="0,0,10,0" Foreground="#888" FontSize="20" FontWeight="Medium"/>
-                            <TextBlock x:Name="textblock_Current_Temp_Core" Margin="0,0,10,0" Foreground="#888" FontSize="20" FontWeight="Medium"/>
-                            <TextBlock x:Name="textblock_Current_Temp_Hotspot" Margin="0,0,10,0" Foreground="#888" FontSize="20" FontWeight="Medium"/>
-                            <TextBlock x:Name="textblock_Current_Temp_Intake" Foreground="#888" FontSize="20" FontWeight="Medium"/>
+                        <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                            <Button x:Name="button_Apply_Fan" Click="button_Apply_Click" Content="Apply" Width="100"/>
+                            <Button x:Name="button_Reset_Fan" Click="button_Reset_Click" Content="Reset" Margin="5,0,0,0" Width="100"/>
+                            <Button x:Name="button_Import_Fan" Click="button_Import_Click" Content="Import" Margin="5,0,0,0" Width="100"/>
+                            <Button x:Name="button_Export_Fan" Click="button_Export_Click" Content="Export" Margin="5,0,0,0" Width="100"/>
                         </StackPanel>
 
                         <Grid Padding="0,-20,0,0">
@@ -215,26 +211,22 @@
                             <TextBox x:Name="textbox_Fan_Temp_3" Margin="5,0,0,0"/>
                             <TextBox x:Name="textbox_Fan_Temp_4" Margin="5,0,0,0"/>
                         </StackPanel>
-
-                        <StackPanel Margin="0,15,0,0" Orientation="Horizontal">
-                            <Button x:Name="button_Apply_Fan" Click="button_Apply_Click" Content="Apply" Width="100"/>
-                            <Button x:Name="button_Reset_Fan" Click="button_Reset_Click" Content="Reset" Margin="5,0,0,0" Width="100"/>
-                            <Button x:Name="button_Import_Fan" Click="button_Import_Click" Content="Import" Margin="5,0,0,0" Width="100"/>
-                            <Button x:Name="button_Export_Fan" Click="button_Export_Click" Content="Export" Margin="5,0,0,0" Width="100"/>
-                        </StackPanel>
                     </StackPanel>
 
                     <!-- Display -->
                     <StackPanel x:Name="stackpanel_Display" Visibility="Collapsed">
-                        <ToggleSwitch x:Name="toggleswitch_FreeSync" OffContent="FreeSync" OnContent="FreeSync"/>
+                        <ToggleSwitch x:Name="toggleswitch_FreeSync" OffContent="AMD FreeSync" OnContent="AMD FreeSync" Toggled="toggleswitch_FreeSync_Toggled"/>
 
-                        <ComboBox Header="Color Depth" Width="300" Margin="0,10,0,0">
+                        <ComboBox x:Name="combobox_Display_ColorDepth" Header="Color Depth" Width="300" Margin="0,10,0,0" SelectionChanged="combobox_Display_ColorDepth_SelectionChanged">
+                            <ComboBoxItem>6 bpc</ComboBoxItem>
                             <ComboBoxItem>8 bpc</ComboBoxItem>
                             <ComboBoxItem>10 bpc</ComboBoxItem>
                             <ComboBoxItem>12 bpc</ComboBoxItem>
+                            <ComboBoxItem>14 bpc</ComboBoxItem>
+                            <ComboBoxItem>16 bpc</ComboBoxItem>
                         </ComboBox>
 
-                        <ComboBox Header="Pixel Format" Width="300" Margin="0,10,0,0">
+                        <ComboBox x:Name="combobox_Display_PixelFormat" Header="Pixel Format" Width="300" Margin="0,10,0,0" SelectionChanged="combobox_Display_PixelFormat_SelectionChanged">
                             <ComboBoxItem>RGB 4:4:4 PC Standard (Full RGB)</ComboBoxItem>
                             <ComboBoxItem>YCbCr 4:4:4</ComboBoxItem>
                             <ComboBoxItem>YCbCr 4:2:2</ComboBoxItem>
