--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -18,9 +18,9 @@
 
         <!-- Menu -->
         <ListBox x:Name="listbox_Main" Grid.Column="0" SelectionMode="Single" SelectionChanged="listbox_Main_SelectionChanged">
-            <ListBoxItem x:Name="listboxitem_Graphics" Content="Graphics" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
             <ListBoxItem x:Name="listboxitem_Tuning" Content="Tuning" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
             <ListBoxItem x:Name="listboxitem_Fans" Content="Fans" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <ListBoxItem x:Name="listboxitem_Graphics" Content="Graphics" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
             <ListBoxItem x:Name="listboxitem_Display" Content="Display" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
             <ListBoxItem x:Name="listboxitem_Info" Content="Info" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         </ListBox>
@@ -64,7 +64,7 @@
             <ScrollViewer Grid.Row="2" Margin="5,0,10,0" VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <!-- Graphics -->
-                    <StackPanel x:Name="stackpanel_Graphics">
+                    <StackPanel x:Name="stackpanel_Graphics" Visibility="Collapsed">
                         <!-- Enhanced Sync -->
                         <ToggleSwitch x:Name="toggleswitch_EnhancedSync" OffContent="Enhanced Sync" OnContent="Enhanced Sync" Toggled="toggleswitch_EnhancedSync_Toggled"/>
 
@@ -128,7 +128,7 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBox Grid.Column="0" x:Name="textbox_Memory_Max" IsEnabled="False" Text="{Binding ElementName=slider_Memory_Max, Path=Value}"/>
-                            <Slider Grid.Column="1" x:Name="slider_Memory_Max" Margin="10,0,0,0" StepFrequency="2"/>
+                            <Slider Grid.Column="1" x:Name="slider_Memory_Max" Margin="10,0,0,0"/>
                         </Grid>
 
                         <TextBlock Text="Power Tuning" Margin="0,10,0,0" FontSize="20" FontWeight="Medium"/>
@@ -162,26 +162,38 @@
                             <Button x:Name="button_Export_Fan" Click="button_Export_Click" Content="Export" Margin="5,0,0,0" Width="100"/>
                         </StackPanel>
 
-                        <Grid Padding="0,-20,0,0">
-                            <Border Margin="0,10,0,0" Width="400" Height="100" BorderBrush="White" BorderThickness="2" CornerRadius="5" HorizontalAlignment="Left">
+                        <Grid Margin="0,10,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <Border Grid.Column="0" Grid.Row="0" BorderBrush="White" BorderThickness="2" CornerRadius="5">
                                 <Grid>
-                                    <Line Margin="0,25,0,0" X1="400" Stroke="#888" StrokeThickness="1"/>
-                                    <Line Margin="0,50,0,0" X1="400" Stroke="#888" StrokeThickness="1"/>
-                                    <Line Margin="0,75,0,0" X1="400" Stroke="#888" StrokeThickness="1"/>
-                                    <Line Margin="100,0,0,0" Y1="100" Stroke="#888" StrokeThickness="1"/>
-                                    <Line Margin="200,0,0,0" Y1="100" Stroke="#888" StrokeThickness="1"/>
-                                    <Line Margin="300,0,0,0" Y1="100" Stroke="#888" StrokeThickness="1"/>
-                                    <Polyline Name="polyline_Chart" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeDashCap="Round" Stroke="#9d1717" StrokeThickness="2"/>
+                                    <Grid Margin="6" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                        <Line Margin="0,25,0,0" X1="500" Stroke="#888" StrokeThickness="1"/>
+                                        <Line Margin="0,50,0,0" X1="500" Stroke="#888" StrokeThickness="1"/>
+                                        <Line Margin="0,75,0,0" X1="500" Stroke="#888" StrokeThickness="1"/>
+                                        <Line Margin="125,0,0,0" Y1="100" Stroke="#888" StrokeThickness="1"/>
+                                        <Line Margin="250,0,0,0" Y1="100" Stroke="#888" StrokeThickness="1"/>
+                                        <Line Margin="375,0,0,0" Y1="100" Stroke="#888" StrokeThickness="1"/>
+                                        <Polyline x:Name="polyline_Fan_Lines" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeDashCap="Round" Stroke="#9d1717" StrokeThickness="2"/>
+                                    </Grid>
+                                    <Grid x:Name="grid_Fan_Dots" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                                 </Grid>
                             </Border>
 
-                            <Grid Margin="405,10,0,0" Height="100">
+                            <Grid Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Stretch">
                                 <TextBlock Text="0% Fan" VerticalAlignment="Bottom"/>
                                 <TextBlock Text="50% Fan" VerticalAlignment="Center"/>
                                 <TextBlock Text="100% Fan" VerticalAlignment="Top"/>
                             </Grid>
 
-                            <Grid Margin="0,130,0,0" Width="400" HorizontalAlignment="Left">
+                            <Grid Grid.Row="1" Margin="0,5,0,0" HorizontalAlignment="Stretch">
                                 <TextBlock Text="0°C" HorizontalAlignment="Left"/>
                                 <TextBlock Text="50°C" HorizontalAlignment="Center"/>
                                 <TextBlock Text="100°C" HorizontalAlignment="Right"/>
@@ -190,22 +202,128 @@
 
                         <ToggleSwitch x:Name="toggleswitch_Fan_Zero_Rpm" Margin="0,10,0,0" OffContent="Zero RPM fan mode" OnContent="Zero RPM fan mode"/>
 
-                        <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                            <TextBlock Width="140" Text="Fan Speed (%)" FontSize="16" Margin="5"/>
-                            <TextBox x:Name="textbox_Fan_Speed_0"/>
-                            <TextBox x:Name="textbox_Fan_Speed_1" Margin="5,0,0,0"/>
-                            <TextBox x:Name="textbox_Fan_Speed_2" Margin="5,0,0,0"/>
-                            <TextBox x:Name="textbox_Fan_Speed_3" Margin="5,0,0,0"/>
-                            <TextBox x:Name="textbox_Fan_Speed_4" Margin="5,0,0,0"/>
-                        </StackPanel>
-                        <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                            <TextBlock Width="140" Text="Temperature (°C)" FontSize="16" Margin="5"/>
-                            <TextBox x:Name="textbox_Fan_Temp_0"/>
-                            <TextBox x:Name="textbox_Fan_Temp_1" Margin="5,0,0,0"/>
-                            <TextBox x:Name="textbox_Fan_Temp_2" Margin="5,0,0,0"/>
-                            <TextBox x:Name="textbox_Fan_Temp_3" Margin="5,0,0,0"/>
-                            <TextBox x:Name="textbox_Fan_Temp_4" Margin="5,0,0,0"/>
-                        </StackPanel>
+                        <TextBlock Text="Fan Speed and Temperature" Margin="0,5,0,0" FontSize="20" FontWeight="Medium"/>
+                        <VariableSizedWrapGrid Orientation="Horizontal" Margin="-5,-5,0,0">
+                            <StackPanel Width="200" Margin="5">
+                                <TextBlock Text="Fan Curve 1" FontSize="16"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Speed_0" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Speed_0, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="%" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Speed_0" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                                <Grid Margin="0,10,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Temp_0" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Temp_0, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="°C" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Temp_0" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                            </StackPanel>
+
+                            <StackPanel Width="200" Margin="5">
+                                <TextBlock Text="Fan Curve 2" FontSize="16"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Speed_1" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Speed_1, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="%" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Speed_1" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                                <Grid Margin="0,10,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Temp_1" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Temp_1, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="°C" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Temp_1" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                            </StackPanel>
+
+                            <StackPanel Width="200" Margin="5">
+                                <TextBlock Text="Fan Curve 3" FontSize="16"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Speed_2" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Speed_2, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="%" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Speed_2" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                                <Grid Margin="0,10,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Temp_2" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Temp_2, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="°C" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Temp_2" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                            </StackPanel>
+
+                            <StackPanel Width="200" Margin="5">
+                                <TextBlock Text="Fan Curve 4" FontSize="16"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Speed_3" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Speed_3, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="%" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Speed_3" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                                <Grid Margin="0,10,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Temp_3" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Temp_3, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="°C" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Temp_3" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                            </StackPanel>
+
+                            <StackPanel Width="200" Margin="5">
+                                <TextBlock Text="Fan Curve 5" FontSize="16"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Speed_4" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Speed_4, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="%" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Speed_4" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                                <Grid Margin="0,10,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Column="0" x:Name="textbox_Fan_Temp_4" IsEnabled="False" Text="{Binding ElementName=slider_Fan_Temp_4, Path=Value}"/>
+                                    <TextBlock Grid.Column="1" Width="20" Text="°C" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                                    <Slider Grid.Column="2" x:Name="slider_Fan_Temp_4" ValueChanged="slider_Fan_ValueChanged"/>
+                                </Grid>
+                            </StackPanel>
+                        </VariableSizedWrapGrid>
                     </StackPanel>
 
                     <!-- Display -->
