--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -92,6 +92,17 @@
                                 <ComboBox x:Name="combobox_VerticalRefresh" Width="260" HorizontalAlignment="Right" SelectionChanged="combobox_VerticalRefresh_SelectionChanged"/>
                             </Grid>
 
+                            <!-- Radeon Boost -->
+                            <Grid Margin="0,10,0,0">
+                                <ToggleSwitch x:Name="toggleswitch_RadeonBoost" OffContent="Radeon Boost" OnContent="Radeon Boost" Toggled="toggleswitch_RadeonBoost_Toggled" ToolTipService.ToolTip="Radeon Boost dynamically reduces resolution during motion to improve performance with little perceptible impact on image quality."/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                    <TextBlock Text="Min. Resolution" VerticalAlignment="Center"/>
+                                    <TextBlock x:Name="textblock_RadeonBoost_MinRes" Width="24" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0" Text="{Binding ElementName=slider_RadeonBoost_MinRes, Path=Value}"/>
+                                    <Slider x:Name="slider_RadeonBoost_MinRes" Width="150" Margin="10,0,10,0" ValueChanged="slider_RadeonBoost_MinRes_ValueChanged"/>
+                                    <TextBlock Text="%" VerticalAlignment="Center"/>
+                                </StackPanel>
+                            </Grid>
+
                             <!-- Radeon Chill -->
                             <Grid Margin="0,10,0,0">
                                 <ToggleSwitch x:Name="toggleswitch_RadeonChill" OffContent="Radeon Chill" OnContent="Radeon Chill" Toggled="toggleswitch_RadeonChill_Toggled"/>
