--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -131,6 +131,17 @@
                                 <ComboBox x:Name="combobox_VerticalRefresh" Width="260" HorizontalAlignment="Right" SelectionChanged="combobox_VerticalRefresh_SelectionChanged"/>
                             </Grid>
 
+                            <!-- Frame Rate Target Control -->
+                            <Grid Margin="0,10,0,0">
+                                <ToggleSwitch x:Name="toggleswitch_Frtc" OffContent="Frame Rate Target Control" OnContent="Frame Rate Target Control" Toggled="toggleswitch_Frtc_Toggled"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                    <TextBlock Text="Max" VerticalAlignment="Center"/>
+                                    <TextBlock x:Name="textblock_Frtc_Max" Width="30" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0" Text="{Binding ElementName=slider_Frtc_Max, Path=Value}"/>
+                                    <Slider x:Name="slider_Frtc_Max" Width="150" Margin="10,0,10,0" ValueChanged="slider_Frtc_Max_ValueChanged"/>
+                                    <TextBlock Text="FPS" VerticalAlignment="Center"/>
+                                </StackPanel>
+                            </Grid>
+
                             <!-- Reset Shader Cache -->
                             <Button x:Name="button_Reset_Shader_Cache" Click="button_Reset_Shader_Cache_Click" Content="Reset Shader Cache" Margin="0,10,0,0" ToolTipService.ToolTip="Clears contents of the disk-based shader cache."/>
                         </StackPanel>
